--- a/app/config.yaml
+++ b/app/config.yaml
@@ -8,3 +8,7 @@ chat:
       - "Tell me about yourself"
       - "Who won the most races in 2019?"
       - "Who won the most F1 World Championships?"
+    slack-dash:
+      - "Tell me about yourself"
+      - "Who won the most races in 2019? Export as CSV"
+      - "Generate an image of a Formula 1 car at Monaco"
