feat: migrate from OpenAI to Google Gemini
- Replace OpenAIResponses with Gemini(id='gemini-2.5-flash') in agent.py
- Replace OpenAIEmbedder with GeminiEmbedder in db/session.py
- Update compose.yaml: OPENAI_API_KEY -> GOOGLE_API_KEY, DB port 5432->5433
- Add google-genai dependency, remove openai from pyproject.toml and requirements.txt
- Fix entrypoint.sh CRLF line endings (Windows Docker compatibility)
- Add pip install google-genai step in Dockerfile
- Update README with full Gemini setup docs, port conflict fix, what changed

--- a/example.env
+++ b/example.env
@@ -1,9 +1,9 @@
-# Required (default configured for OpenAI)
-OPENAI_API_KEY=sk-***
+# Required (configured for Google Gemini)
+GOOGLE_API_KEY=***
 
 # Optional: Use a different model provider
+# OPENAI_API_KEY=sk-***
 # ANTHROPIC_API_KEY=sk-ant-***
-# GOOGLE_API_KEY=***
 
 # Exa API key for web research
 # EXA_API_KEY=***
